# pyadvacourse_dw

./: LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
src/pyadvacourse_dw/: __init__.py
tests/: test_pyadvacourse_dw.py
